[package]
name = "multifis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
todel = { git = "https://github.com/eludris/eludris", version = "0.3.2", branch = "next"}
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "fs", "time"] }
