[package]
name = "multifis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
todel = { git = "https://github.com/eludris/eludris", version = "0.3.2", branch = "next"}
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "fs", "time"] }
